No Guava classes used